# License-Plate-Recognition

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
python/: Dockerfile  License_Plate_Recognition.ipynb  main.py  test_main.py
python-uv/: Dockerfile
rust/: Cargo.toml  Dockerfile  flake.nix
rust/src/: Dockerfile  main.rs
src/: flake.nix  main.rs
