[project]
dependencies = [
    "easyocr>=1.7.2",
    "imutils>=0.5.4",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "ruff>=0.9.9",
    "toml>=0.10.2",
]
name = "license-plate-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
